opam-version: "1.2"
name: "round"
version: "1.0"
maintainer: "tyabu1212@gmail.com"
authors: ["Tomohito Yabu"]
homepage: "https://github.com/tyabu12/ocaml-round"
bug-reports: "https://github.com/tyabu12/ocaml-round/issues"
dev-repo: "https://github.com/tyabu12/ocaml-round.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build"
    "--only" "round"
    "--root" "."
    "-j" jobs
    "@install"]
]
install: ["jbuilder" "install"]
remove: ["ocamlfind" "remove" "round"]
depends: [
  "jbuilder" {build & >= "1.0+beta20"}
  "ocamlfind" {build}
]
available: [ ocaml-version >= "4.06.0" ]
